 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 3
============

* [cdunde]: Model Editor - Setup QuArK Specific page modules for easy use with importers.

* [cdunde/DanielPharos]: Model Editor - Added bone handle scaling functions and selection option.

* [cdunde/DanielPharos]: Added full Vertex Weights support with its own dialog display
          - with either manual or auto updating and saving for each model component.

* [cdunde/DanielPharos]: Added full Vertex U,V Coloring support to the bones Specifics page.

* [cdunde/DanielPharos]: Completely rebuilt the Model Editor's bones system to coincide more
          - more with games and other model editor systems.

* [DanielPharos]: Fix a major slowdown in the progressbar drawing routine.

* [DanielPharos]: Fixed the treeview color boxes for components not showing up the first time.

* [cdunde/DanielPharos]: Added vertex color support.

* [DanielPharos]: Fix some problems with the FAKK2 and EF2 compilers producing bad BSP filenames.

* [cdunde/DanielPharos]: Added asi model format importing plugin.

* [DanielPharos]: Updated to DevIL 1.7.8, added IWI loading, and added many new image
          - loading/saving options.

* [DanielPharos]: You can now "uninstall" gamemodes: just delete the addons-directory of that game.

* [DanielPharos]: Read in two additional MOHAA surface flags. MOHAA .map file loading is still not
          - working properly though.

* [DanielPharos]: Grayed out beziers can now not be selected in views anymore.

* [DanielPharos]: Removed Quake 3's Call of Duty addon. People should switch to CoD gamemode.

* [DanielPharos]: Add colorboxes in treeview for Model Editor bones to display start_color and end_color.
