@@ -15,6 +15,8 @@ $Id$
 6.6.0 Beta 3
 ============
 
+* [DanielPharos]: Added a horizontal scrollbar in the treeview.
+
 * [cdunde]: Model Editor - Setup QuArK Specific page modules for easy use with importers.
 
 * [cdunde/DanielPharos]: Model Editor - Added bone handle scaling functions and selection option.
